--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -3,6 +3,18 @@
 <script src="{{"/assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js" | relative_url }}"></script>
 
 <script src="{{"/assets/scripts.js" | relative_url }}"></script>
+<script src="{{"/assets/parallax.min.js" | relative_url }}"></script>
+
+<script src="{{"/assets/aos.js" | relative_url }}"></script>
+
+<script>
+    AOS.init({
+      offset: 200,
+      duration: 600,
+      easing: 'ease-in-sine',
+      delay: 100,
+    });
+  </script>
 
 {% if page.url contains 'contact' %}
   <!-- Form Validation -->
