--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <!-- Page Header -->
 {% if page.background %}
-  <header class="masthead" style="background-image: url('{{ page.background | prepend: site.baseurl | replace: '//', '/' }}')">
+  <header class="masthead parallax-window" data-parallax="scroll" data-image-src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}">
   {% else %}
     <header class="masthead">
     {% endif %}
@@ -32,26 +32,14 @@ layout: default
         <!-- Home Post List -->
         {% for post in site.posts limit : 5 %}
 
-          <article class="post-preview">
+          <article class="post-preview" data-aos="fade-up">
             <a href="{{ post.url | prepend: site.baseurl | replace: '//', '/' }}">
               <h2 class="post-title">{{ post.title }}</h2>
-              {% if post.subtitle %}
-                <h3 class="post-subtitle">{{ post.subtitle }}</h3>
-              {% else %}
-                <h3 class="post-subtitle">{{ post.excerpt | strip_html | truncatewords: 15 }}</h3>
-              {% endif %}
             </a>
-            <p class="post-meta">Posted by
-              {% if post.author %}
-                {{ post.author }}
-              {% else %}
-                {{ site.author }}
-              {% endif %}
-              on
+            <p class="post-meta">
               {{ post.date | date: '%B %d, %Y' }}</p>
           </article>
 
-          <hr>
 
         {% endfor %}
 
