avancement infinite scroll

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,7 @@
 <script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
+{% if page.title contains 'Posts' %}
+<script src="{{"/assets/infinite-jekyll.js" | relative_url }}"></script>
+{% endif %}
 <script src="{{"/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" | relative_url }}"></script>
 <script src="{{"/assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js" | relative_url }}"></script>
 
