--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -44,7 +44,7 @@ layout: default
         {% endfor %}
 
         <!-- Pager -->
-        <div class="clearfix">
+        <div class="clearfix" data-aos="fade-up">
           <a class="btn btn-primary float-right" href="{{"/posts" | relative_url }}">View All Posts &rarr;</a>
         </div>
 
