--- a/assets/jluc.css
+++ b/assets/jluc.css
@@ -1,3 +1,57 @@
+body {
+  background:#000;
+}
+
+.navbar-brand {
+  display: none;
+}
+
+.is-fixed.is-visible .navbar-brand {
+  display: block;
+}
+
 header.masthead {
   background: transparent;
+}
+
+.post-preview > a {
+    color: #fff;
+}
+
+.btn-primary {
+    background-color: #fff;
+    border-color: #fff;
+    color: #000;
+    border-radius: 12px;
+}
+
+.infinite-spinner {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  background-color: #333;
+  margin: 60px auto;
+
+  -webkit-animation: scaleout 1.0s infinite ease-in-out;
+  animation: scaleout 1.0s infinite ease-in-out;
+}
+
+@-webkit-keyframes scaleout {
+  0% { -webkit-transform: scale(0.0) }
+  100% {
+    -webkit-transform: scale(1.0);
+    opacity: 0;
+  }
+}
+
+@keyframes scaleout {
+  0% {
+    transform: scale(0.0);
+    -webkit-transform: scale(0.0);
+  } 100% {
+    transform: scale(1.0);
+    -webkit-transform: scale(1.0);
+    opacity: 0;
+  }
 }
