--- a/assets/jluc.css
+++ b/assets/jluc.css
@@ -2,13 +2,13 @@ body {
   background:#000;
 }
 
-.navbar-brand {
+/*.navbar-brand {
   display: none;
 }
 
 .is-fixed.is-visible .navbar-brand {
   display: block;
-}
+}*/
 
 header.masthead {
   background: transparent;
@@ -54,4 +54,375 @@ header.masthead {
     -webkit-transform: scale(1.0);
     opacity: 0;
   }
+}
+
+/* menu */
+.page-header {
+  position: fixed;
+  z-index: 1031;
+  padding: 0;
+  top: 0;
+  bottom: 0;
+  left: -100%;
+  width: 100%;
+}
+
+.page-header .header-bg-layer {
+  position: fixed;
+  z-index: 26;
+  top: 0;
+  left: 0;
+  -moz-transform: translateX(-100%);
+  -webkit-transform: translateX(-100%);
+  -o-transform: translateX(-100%);
+  -ms-transform: translateX(-100%);
+  transform: translateX(-100%);
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  background: #ffffff;
+  -webkit-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -moz-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -o-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -webkit-transition-delay: 200ms;
+  -moz-transition-delay: 200ms;
+  -o-transition-delay: 200ms;
+  transition-delay: 200ms;
+}
+
+.page-header .header-container {
+  position: fixed;
+  z-index: 26;
+  top: 0;
+  -moz-transform: translateX(0%);
+  -webkit-transform: translateX(0%);
+  -o-transform: translateX(0%);
+  -ms-transform: translateX(0%);
+  transform: translateX(0%);
+  bottom: 0;
+  width: 100%;
+  background: #16171B;
+  padding: 0;
+  -webkit-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -moz-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -o-transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 500ms cubic-bezier(0.86, 0, 0.07, 1);
+  -webkit-transition-delay: 0ms;
+  -moz-transition-delay: 0ms;
+  -o-transition-delay: 0ms;
+  transition-delay: 0ms;
+}
+
+.page-header .header-container:after {
+position: absolute;
+content: "";
+top: 0;
+left: 0;
+bottom: 0;
+right: 0;
+z-index: -1;
+background: #280B65;
+}
+
+.page-header .header-container .main-menu ul {
+  padding: 0;
+  margin: -30px auto 0;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  -moz-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  -o-transform: translateY(-50%);
+  -ms-transform: translateY(-50%);
+  transform: translateY(-50%);
+  list-style: none;
+  text-align: center
+}
+
+.page-header .header-container .main-menu ul li {
+  margin: 20px 0;
+  height: calc(100% / 4);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  opacity: 0;
+  position: relative;
+  -moz-transform: translateX(-120px);
+  -webkit-transform: translateX(-120px);
+  -o-transform: translateX(-120px);
+  -ms-transform: translateX(-120px);
+  transform: translateX(-120px);
+  -webkit-transition: all 450ms cubic-bezier(0.86, 0, 0.07, 1);
+  -moz-transition: all 450ms cubic-bezier(0.86, 0, 0.07, 1);
+  -o-transition: all 450ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 450ms cubic-bezier(0.86, 0, 0.07, 1);
+}
+
+.page-header .header-container .main-menu ul li:nth-child(1) {
+  -webkit-transition-delay: 800ms;
+  -moz-transition-delay: 800ms;
+  -o-transition-delay: 800ms;
+  transition-delay: 800ms;
+}
+
+.page-header .header-container .main-menu ul li:nth-child(2) {
+  -webkit-transition-delay: 880ms;
+  -moz-transition-delay: 880ms;
+  -o-transition-delay: 880ms;
+  transition-delay: 880ms;
+}
+
+.page-header .header-container .main-menu ul li:nth-child(3) {
+  -webkit-transition-delay: 960ms;
+  -moz-transition-delay: 960ms;
+  -o-transition-delay: 960ms;
+  transition-delay: 960ms;
+}
+
+.page-header .header-container .main-menu ul li:nth-child(4) {
+  -webkit-transition-delay: 1040ms;
+  -moz-transition-delay: 1040ms;
+  -o-transition-delay: 1040ms;
+  transition-delay: 1040ms;
+}
+
+.page-header .header-container .main-menu ul li:nth-child(5) {
+  -webkit-transition-delay: 1100ms;
+  -moz-transition-delay: 1100ms;
+  -o-transition-delay: 1100ms;
+  transition-delay: 1100ms
+}
+
+.page-header .header-container .main-menu ul li a {
+  color: #ffffff;
+  font-size: 4rem;
+  font-weight: bold;
+  position: relative;
+  top: 50%;
+  text-transform: uppercase;
+  -moz-transform: perspective(1px) translateY(-50%);
+  -webkit-transform: perspective(1px) translateY(-50%);
+  -o-transform: perspective(1px) translateY(-50%);
+  -ms-transform: perspective(1px) translateY(-50%);
+  transform: perspective(1px) translateY(-50%);
+}
+
+@media only screen and (min-width: 768px) {
+  .page-header .header-container .main-menu ul li a {
+      font-size: 60px
+  }
+}
+
+.page-header .header-container .main-menu ul li a:hover {
+  box-shadow: inset 0 -6px 0 #D21044;
+}
+
+
+nav .menu-btn {
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  width: auto;
+  height: 60px;
+  z-index: 25;
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  white-space: nowrap;
+  opacity: 1;
+  font-size: 0;
+  font-weight: 400;
+  line-height: 1;
+}
+
+
+
+nav .menu-btn .menu-icon-wrapper {
+  float: right;
+  background: #ffffff;
+  text-align: center;
+  padding: 0;
+  width: 60px;
+  height: 100%;
+  position: relative;
+  overflow: hidden;
+  font-size: 20px;
+  pointer-events: none;
+}
+
+nav .menu-btn .menu-icon-wrapper .menu-icon {
+  width: 100%;
+  height: 100%;
+  background: #060606;
+  pointer-events: none;
+}
+
+nav .menu-btn .menu-icon-wrapper,
+nav .menu-btn .menu-icon-wrapper .menu-icon {
+background: transparent;
+}
+
+
+nav .menu-btn .menu-icon-wrapper .menu-icon span {
+  display: block;
+  text-align: center;
+  position: absolute;
+  margin: -2px 0 0 -10px;
+  top: 50%;
+  left: 50%;
+  width: 20px;
+  height: 3px;
+  background: #ffffff;
+}
+
+nav .menu-btn .menu-icon-wrapper .menu-icon span:before, nav .menu-btn .menu-icon-wrapper .menu-icon span:after {
+ position: absolute;
+  top: 0;
+  left: 0;
+  content: '';
+  opacity: 1;
+  width: 20px;
+  height: 3px;
+  background-color: #ffffff;
+  display: block;
+}
+
+nav .menu-btn .menu-icon-wrapper .menu-icon span:before,
+nav .menu-btn .menu-icon-wrapper .menu-icon span:after,
+nav .menu-btn .menu-icon-wrapper .menu-icon span {
+background: #ffffff;
+}
+
+nav .menu-btn .menu-icon-wrapper .menu-icon span:before {
+  margin-top: -6px
+}
+
+nav .menu-btn .menu-icon-wrapper .menu-icon span:after {
+  margin-top: 6px;
+}
+
+
+
+
+
+.page-header .close-btn {
+  padding: 0;
+  margin: 40px;
+  position: absolute;
+  right: -100%;
+  top: 0;
+  width: 32px;
+  height: 32px;
+  z-index: 27;
+  display: block;
+  overflow: hidden;
+  cursor: pointer;
+  white-space: nowrap;
+  opacity: 1;
+  color:#ffffff;
+  font-size: 0;
+  font-weight: 400;
+  line-height: 1;
+  -moz-transform: scale(0);
+  -webkit-transform: scale(0);
+  -o-transform: scale(0);
+  -ms-transform: scale(0);
+  transform: scale(0);
+  -webkit-transition: all 300ms cubic-bezier(0.86, 0, 0.07, 1);
+  -moz-transition: all 300ms cubic-bezier(0.86, 0, 0.07, 1);
+  -o-transition: all 300ms cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 300ms cubic-bezier(0.86, 0, 0.07, 1);
+  -webkit-transition-delay: 0ms;
+  -moz-transition-delay: 0ms;
+  -o-transition-delay: 0ms;
+  transition-delay: 0ms
+}
+
+.page-header .close-btn:before, .page-header .close-btn:after {
+  content: '';
+  display: block;
+  width: 12px;
+  height: 12px;
+  position: absolute;
+  top: 6px;
+  -moz-transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg)
+}
+
+.page-header .close-btn:before {
+  left: -2.5px;
+  border-top: 8px solid #ffffff;
+  border-right: 8px solid #ffffff;
+}
+
+.page-header .close-btn:after {
+  right: -2.5px;
+  border-bottom: 8px solid #ffffff;
+  border-left: 8px solid #ffffff;
+}
+
+
+
+.page-header.menu-opened .header-bg-layer {
+  -moz-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -o-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0);
+  -webkit-transition-delay: 0ms;
+  -moz-transition-delay: 0ms;
+  -o-transition-delay: 0ms;
+  transition-delay: 0ms
+}
+
+.page-header.menu-opened .header-container {
+  -moz-transform: translateX(100%);
+  -webkit-transform: translateX(100%);
+  -o-transform: translateX(100%);
+  -ms-transform: translateX(100%);
+  transform: translateX(100%);
+  -webkit-transition-delay: 280ms;
+  -moz-transition-delay: 280ms;
+  -o-transition-delay: 280ms;
+  transition-delay: 280ms
+}
+
+.page-header.menu-opened .header-container .main-menu li {
+  opacity: 1;
+  -moz-transform: translateX(0);
+  -webkit-transform: translateX(0);
+  -o-transform: translateX(0);
+  -ms-transform: translateX(0);
+  transform: translateX(0)
+}
+
+
+/*@media only screen and (min-width: 1024px) {*/
+  .page-header.menu-opened .menu-btn {
+      -moz-transform: translateX(100%);
+      -webkit-transform: translateX(100%);
+      -o-transform: translateX(100%);
+      -ms-transform: translateX(100%);
+      transform: translateX(100%);
+      -webkit-transition-delay: 0ms;
+      -moz-transition-delay: 0ms;
+      -o-transition-delay: 0ms;
+      transition-delay: 0ms
+  }
+/*}*/
+
+.page-header.menu-opened .close-btn {
+  -moz-transform: scale(1);
+  -webkit-transform: scale(1);
+  -o-transform: scale(1);
+  -ms-transform: scale(1);
+  transform: scale(1);
+  -webkit-transition-delay: 700ms;
+  -moz-transition-delay: 700ms;
+  -o-transition-delay: 700ms;
+  transition-delay: 700ms
 }
