--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,3 +1,24 @@
+<input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
+
+<!-- Toggleable sidebar -->
+<div class="sidebar" id="sidebar">
+  <div class="sidebar-item">
+    <p>A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.</p>
+  </div>
+  <nav class="sidebar-nav">
+    <a class="sidebar-nav-item" href="/lanyon/">Home</a>
+    <a class="sidebar-nav-item" href="/lanyon/about/">About</a>
+    <a class="sidebar-nav-item" href="false">Download</a>
+    <a class="sidebar-nav-item" href="">GitHub project</a>
+    <span class="sidebar-nav-item">Currently v1.1.0</span>
+  </nav>
+
+  <div class="sidebar-item">
+    <p>
+      &copy; 2018. All rights reserved.
+    </p>
+  </div>
+</div>
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <!--<div class="menu-btn action-menu">
@@ -7,7 +28,7 @@
       </div>
   </div>-->
   <div class="container">
-    <a class="navbar-brand action-menu" href="{{"/" | relative_url }}">Into the While</a>
+    <a class="navbar-brand" href="{{"/" | relative_url }}">Into the While</a>
     <!--<button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fa fa-bars"></i>
@@ -31,7 +52,7 @@
   </div>
 </nav>
 <!-- menu -->
-<div class="page-header">
+<!--<div class="page-header">
     <div class="header-bg-layer"></div>
     <div class="header-container">
         <div class="main-menu">
@@ -44,5 +65,5 @@
         </div>
     </div>
     <div class="close-btn action-menu"> <span>Close</span></div>
-</div>
+</div>-->
 <!-- menu -->
