--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,14 @@
   <body>
 
     {% include navbar.html %}
-
+    <div class="wrap">
     {{ content }}
-
     {% include footer.html %}
+    </div>
+    <label for="sidebar-checkbox" class="sidebar-toggle"></label>
+
+
+
 
     {% include scripts.html %}
 
