--- a/assets/jluc.css
+++ b/assets/jluc.css
@@ -8,13 +8,30 @@ body {
   width: 100%;
 }
 
-/*.navbar-brand {
+.navbar>.container {
+  display: block;
+}
+
+#mainNav .container {
+  text-align: center;
+}
+
+#mainNav .navbar-brand {
+  font-weight: 400;
+  margin:0;
+  padding: 0;
+  font-size: 1.8rem;
+  font-family: 'Sedgwick Ave', cursive;
+}
+
+.navbar-brand {
   display: none;
+  padding: 0;
 }
 
 .is-fixed.is-visible .navbar-brand {
   display: block;
-}*/
+}
 
 header.masthead {
   background: transparent;
@@ -507,7 +524,8 @@ a.sidebar-nav-item:focus {
   left: 1rem;
   display: block;
   padding: .25rem .75rem;
-  color: #505050;
+  /*color: #505050;*/
+  color: #000;
   background-color: #fff;
   border-radius: .25rem;
   cursor: pointer;
@@ -518,13 +536,13 @@ a.sidebar-nav-item:focus {
   width: 1rem;
   height: .75rem;
   content: "";
-  background-image: -webkit-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
-  background-image:    -moz-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
-  background-image:     -ms-linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
-  background-image:         linear-gradient(to bottom, #555, #555 20%, #fff 20%, #fff 40%, #555 40%, #555 60%, #fff 60%, #fff 80%, #555 80%, #555 100%);
+  background-image: -webkit-linear-gradient(to bottom, #000, #000 20%, #fff 20%, #fff 40%, #000 40%, #000 60%, #fff 60%, #fff 80%, #000 80%, #000 100%);
+  background-image:    -moz-linear-gradient(to bottom, #000, #000 20%, #fff 20%, #fff 40%, #000 40%, #000 60%, #fff 60%, #fff 80%, #000 80%, #000 100%);
+  background-image:     -ms-linear-gradient(to bottom, #000, #000 20%, #fff 20%, #fff 40%, #000 40%, #000 60%, #fff 60%, #fff 80%, #000 80%, #000 100%);
+  background-image:         linear-gradient(to bottom, #000, #000 20%, #fff 20%, #fff 40%, #000 40%, #000 60%, #fff 60%, #fff 80%, #000 80%, #000 100%);
 }
 
-.sidebar-toggle:active,
+/*.sidebar-toggle:active,
 #sidebar-checkbox:focus ~ .sidebar-toggle,
 #sidebar-checkbox:checked ~ .sidebar-toggle {
   color: #fff;
@@ -538,7 +556,7 @@ a.sidebar-nav-item:focus {
   background-image:    -moz-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
   background-image:     -ms-linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
   background-image:         linear-gradient(to bottom, #fff, #fff 20%, #555 20%, #555 40%, #fff 40%, #fff 60%, #555 60%, #555 80%, #fff 80%, #fff 100%);
-}
+}*/
 
 @media (min-width: 30.1em) {
   .sidebar-toggle {
