avancement header + parallax

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,7 +8,7 @@ layout: default
   {% else %}
     <header class="masthead">
     {% endif %}
-    <div class="overlay"></div>
+    <!--<div class="overlay"></div>
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
@@ -20,6 +20,29 @@ layout: default
           </div>
         </div>
       </div>
+    </div>-->
+    <div class="bg-heading">
+      <svg id="scene" viewBox="0 0 490 456" style="background-color:#ffffff00" version="1.1"
+	xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
+	x="0px" y="0px" width="490px" height="456px"
+>
+<defs>
+						<linearGradient id="gradient-1" x1="0%" y1="0%" x2="100%" y2="100%">
+							<stop stop-color="#9d316e"/>
+							<stop offset="1" stop-color="#de2d3e"/>
+						</linearGradient>
+					</defs>
+	<path data-depth="0.10" d="M 164.8 388.7 C 199.8 433.2 269.3 441.5 308.4 406.8 C 333.4 386.7 367.7 380.8 390 357 C 407.7 339.1 410.6 311.8 409.7 286.6 C 408.8 266 408.9 245.2 412.7 225.2 C 417.7 193.9 423.8 161.4 414.8 129.1 C 401.8 75.1 350.5 29 296 28.1 C 262.6 27 232.7 43.9 209.5 65.4 C 183.5 86.9 156.3 107.1 127.4 124.4 C 101.4 142.4 77.1 167.1 71.7 200.5 C 66.8 233.4 81.6 266.9 100.3 294.7 C 120.9 326.7 143.1 357.5 164.8 388.7 L 164.8 388.7 Z" fill="#000000"/>
+	<path data-depth="0.25" d="M 112.9 269.6 C 125.4 285.4 138.9 300.6 151.5 316.4 C 175.4 345.3 199.7 374.6 228.8 398.3 C 261.9 416 303.5 409.6 328.1 384.8 C 349.6 372.8 375 363 386.9 339.7 C 402.2 301.2 388.4 256 402.3 217.1 C 410.9 185.4 417.6 150 404.7 116.9 C 390.1 68.4 333.8 34.1 287.5 48.3 C 256.3 58.6 238.6 88.4 213 106.8 C 179 132.9 135.4 146.4 108.1 180.9 C 89.5 205.6 93.9 243.7 112.9 269.6 L 112.9 269.6 Z" fill="#000000"/>
+	<path data-depth="0.40" d="M 136 263.9 C 166.4 304.7 199.7 346 244.9 370.1 C 273.3 386.1 306.9 382.5 334.1 370.8 C 352.3 364.3 372.7 355.7 380 336.2 C 388.7 298.8 377 257.3 391.9 221.5 C 402.8 192 411.4 159.4 403.4 126.6 C 397.5 100.5 380.2 74.9 354.7 64.9 C 328.1 53.3 295.9 57.4 276.6 77.5 C 243.3 104.8 211.6 135.5 171.5 153 C 149.2 165.8 126.4 182.5 118.9 208.9 C 115.9 228.1 124.3 248.1 136 263.9 L 136 263.9 Z" fill="#000000"/>
+	<path data-depth="0.55" d="M 180.3 291.5 C 207.7 331.6 252.5 362.6 299.9 364.4 C 324.1 364.7 350.3 354.4 359.8 330.9 C 370.4 298.4 360.6 260.1 377.1 229.6 C 389 199.2 403.3 167.4 398.7 132.7 C 397.4 106.1 375.9 82.4 351.2 74.5 C 334.9 68.8 317.2 71.5 303.6 80.3 C 261.8 103.6 231.6 142.6 189.1 164.9 C 171.2 176.6 152.7 192.8 150.5 216.4 C 149.1 243.8 165.4 269 180.3 291.5 L 180.3 291.5 Z" fill="#000000"/>
+	<path data-depth="0.70" d="M 206.2 301.1 C 231.4 338.5 280.6 360.5 321.5 347.1 C 345.6 337.7 357.5 310.4 356.7 284.4 C 362.7 234.5 391.2 191 390.4 139.4 C 389.7 114.1 367.7 87.3 341.9 87.9 C 312.6 88.7 289.9 108.6 270.5 127.7 C 239.6 156.7 204.8 184.2 187.3 224.7 C 180.6 250.5 189.9 279.3 206.2 301.1 L 206.2 301.1 Z" fill="#000000"/>
+	<path data-depth="0.85" d="M 218 299.6 C 243.3 335.2 296.6 351.3 329.7 326.8 C 345.8 314.9 343.9 291.1 346.8 272.1 C 351.9 238.6 370.7 210.4 377.6 177.4 C 381.8 157.6 385 135.3 376.6 115.5 C 369.6 99 348.8 92.3 332.8 97.8 C 302.7 108.1 280.3 130.4 257.9 151.3 C 232.7 174.8 207.9 202.7 201.7 238.7 C 198.2 259.5 205.3 281.8 218 299.6 L 218 299.6 Z" fill="#000000"/>
+	<path data-depth="1.00" d="M 223.9 297.5 C 246.7 330.7 295.3 346.1 326.4 323.8 C 338.2 315.4 335.5 298 334.3 284.4 C 329.8 235.7 361.2 192.4 352.7 144.2 C 350.3 130.3 330.1 130.3 319.2 134.4 C 275.5 151 238 183.4 216.9 225.3 C 206 247 209 275.8 223.9 297.5 L 223.9 297.5 Z" fill="#000000"/>
+</svg>
+    </div>
+    <div class="page-heading">
+      <h1>{{ site.title }}</h1>
     </div>
   </header>
 
