--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -6,7 +6,8 @@
 <script src="{{"/assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js" | relative_url }}"></script>
 
 <script src="{{"/assets/scripts.js" | relative_url }}"></script>
-<script src="{{"/assets/parallax.min.js" | relative_url }}"></script>
+<!--<script src="{{"/assets/parallax.min.js" | relative_url }}"></script>-->
+<script src="{{"/assets/parallax.js" | relative_url }}"></script>
 
 <script src="{{"/assets/aos.js" | relative_url }}"></script>
 
@@ -17,6 +18,8 @@
       easing: 'ease-in-sine',
       delay: 100,
     });
+    var scene = document.getElementById('scene');
+      var parallax = new Parallax(scene);
   </script>
 
 {% if page.url contains 'contact' %}
