--- a/assets/jluc.css
+++ b/assets/jluc.css
@@ -1,5 +1,6 @@
 body {
-  background:#280B65;
+  /*background:#280B65;*/
+  background:#fff;
   overflow-x: hidden;
 }
 
@@ -14,6 +15,55 @@ body {
 
 #mainNav .container {
   text-align: center;
+}
+
+header.masthead::before {
+  position: absolute;
+  content:'';
+  top:0;
+  left:0;
+  right:0;
+  bottom:0;
+  background: url(../img/noise.gif);
+  opacity: 0.1;
+}
+
+.bg-heading {
+  position: absolute;
+  top:50%;
+  left:50%;
+  width:490px;
+  height:456px;
+  transform: translateX(-50%) translateY(-50%);
+  z-index:-1;
+}
+
+.bg-heading path {
+	fill: url(#gradient-1);
+}
+
+.bg-heading path:first-of-type {
+	fill-opacity: 0.1;
+}
+
+.bg-heading path:nth-of-type(2) {
+	fill-opacity: 0.2;
+}
+
+.bg-heading path:nth-of-type(3) {
+	fill-opacity: 0.3;
+}
+
+.bg-heading path:nth-of-type(4) {
+	fill-opacity: 0.4;
+}
+
+.bg-heading path:nth-of-type(5) {
+	fill-opacity: 0.5;
+}
+
+.bg-heading path:nth-of-type(6) {
+	fill-opacity: 0.6;
 }
 
 #mainNav .navbar-brand {
@@ -33,12 +83,8 @@ body {
   display: block;
 }
 
-header.masthead {
-  background: transparent;
-}
-
 .post-preview > a {
-    color: #fff;
+    color: $gray-900;
 }
 
 .btn-primary {
