--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,22 +9,13 @@
 
     <!-- Toggleable sidebar -->
     <div class="sidebar" id="sidebar">
-      <div class="sidebar-item">
-        <p>A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.</p>
-      </div>
+      <div class="sidebar-item"></div>
       <nav class="sidebar-nav">
         <a class="sidebar-nav-item" href="/lanyon/">Home</a>
         <a class="sidebar-nav-item" href="/lanyon/about/">About</a>
         <a class="sidebar-nav-item" href="false">Download</a>
         <a class="sidebar-nav-item" href="">GitHub project</a>
-        <span class="sidebar-nav-item">Currently v1.1.0</span>
       </nav>
-
-      <div class="sidebar-item">
-        <p>
-          &copy; 2018. All rights reserved.
-        </p>
-      </div>
     </div>
 
     <div class="wrap">
