modif header sur tous les types de page

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,27 +3,33 @@ layout: default
 ---
 
 <!-- Page Header -->
-{% if page.background %}
-<header class="masthead parallax-window" data-parallax="scroll" data-image-src="{{ page.background | prepend: site.baseurl | replace: '//', '/' }}">
-{% else %}
 <header class="masthead">
-{% endif %}
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-md-10 mx-auto">
-        <div class="post-heading">
-          <h1>{{ page.title }}</h1>
-          {% if page.subtitle %}
-          <h2 class="subheading">{{ page.subtitle }}</h2>
-          {% endif %}
-          <span class="meta">Posted by
-            <a href="#">Start Bootstrap</a>
-            on {{ page.date | date: '%B %d, %Y' }}</span>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="bg-heading">
+  <svg id="scene" viewBox="0 0 640 456" style="background-color:#ffffff00" version="1.1"
+xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xml:space="preserve"
+x="0px" y="0px" width="640px" height="456px"
+>
+<defs>
+        <linearGradient id="gradient-1" x1="0%" y1="0%" x2="100%" y2="100%">
+          <stop stop-color="#9d316e"/>
+          <stop offset="1" stop-color="#de2d3e"/>
+        </linearGradient>
+      </defs>
+      <path data-depth="1.00" d="M 123 157.5 C 99 188.3 74 222.2 75 265.9 C 75 283.8 98 296 115 299 C 168 308.3 216 299.1 269 319.3 C 317 337.6 360 376.4 410 390.8 C 445 401 481 399.4 509 386.5 C 530 377 553 364.2 562 342.1 C 571 317.7 558 286.2 540 260.2 C 527 241.4 513 223.2 499 204.7 C 481 179.5 464 153.5 444 129.7 C 426 107.6 408 81.1 381 69.4 C 336 49.9 291 59.4 253 71.5 C 201 87.9 154 116.4 123 157.5 L 123 157.5 Z" />
+      <path data-depth="0.90" d="M 138 162 C 119 187 99 216 105 252.1 C 108 272.7 136 282.5 153 282.5 C 205 282.5 260 292.7 312 322.8 C 349 344.2 383 373.8 422 383.1 C 477 396.3 533 381.2 554 339.6 C 566 316.5 552 285.3 534 259.9 C 508 223 480 186.7 456 148.6 C 435 115.5 402 86.3 365 76.7 C 319 64.8 277 74.5 239 88.3 C 203 101.3 172 122.7 148 150.3 C 145 154.4 141 158.2 138 162 L 138 162 Z" />
+      <path data-depth="0.80" d="M 166 158.8 C 149 181.1 123 211.2 136 242.2 C 146 266.2 179 262.1 200 265.5 C 257 275 314 308 365 344.8 C 425 387.9 502 390.7 541 350.6 C 558 333.1 554 299.4 538 274 C 513 235.4 485 199.5 459 161.6 C 440 133.7 414 107.8 382 94.3 C 351 81.1 319 83.7 290 89.7 C 241 99.8 195 121.1 166 158.8 L 166 158.8 Z"/>
+      <path data-depth="0.70" d="M 186 163.6 C 175 178.5 161 199.1 172 221 C 181 238.9 204 238.9 221 245.7 C 278 268.8 329 309.4 382 345.6 C 415 368.1 456 380.1 488 372.7 C 514 366.7 541 355.2 547 329.7 C 553 307 535 281.9 520 260.2 C 495 223.9 471 186.5 444 151.5 C 418 118.1 374 97.6 338 99.4 C 296 101.5 257 110.3 226 128.8 C 210 138.3 197 149.2 186 163.6 L 186 163.6 Z"/>
+      <path data-depth="0.60" d="M 208 167.1 C 198 179.3 186 199 199 215.4 C 223 245.7 261 253.7 293 275.2 C 338 306.1 381 346.5 432 365.2 C 477 381.7 526 366.3 538 328 C 545 305 525 277.1 507 255.1 C 479 221.3 460 181.2 429 149.6 C 397 117.4 350 108.4 315 114.8 C 272 122.5 232 136 208 167.1 L 208 167.1 Z"/>
+      <path data-depth="0.50" d="M 229 171.4 C 221 182 222 199.7 236 212.8 C 259 234.5 287 245.8 310 266.4 C 347 299.5 386 334.9 431 354.4 C 470 371.5 516 365 530 331.3 C 537 312.9 521 289.3 506 270.9 C 483 242.6 470 209.1 449 179.4 C 425 146.6 384 126.1 349 125.5 C 319 125 292 130.7 267 140.6 C 251 146.9 239 157.9 229 171.4 L 229 171.4 Z"/>
+      <path data-depth="0.40" d="M 260 180.9 C 247 200.9 255 203.3 285 230 C 315 256.7 377 323.9 421 348.5 C 465 373.1 505 360.3 520 341.6 C 535 322.9 529 310.5 515 294.1 C 501 277.7 494 262.6 479 239.6 C 464 216.6 436 179.5 411 162.7 C 386 145.9 374 146.6 346 147.4 C 318 148.2 273 160.9 260 180.9 L 260 180.9 Z"/>
+</svg>
+</div>
+<div class="page-heading">
+  <h1>{{ page.title }}</h1>
+  {% if page.subtitle %}
+  <h2 class="subheading">{{ page.subtitle }}</h2>
+  {% endif %}
+</div>
 </header>
 
 <div class="container">
