--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,8 +2,8 @@
 {% if page.title contains 'Posts' %}
 <script src="{{"/assets/infinite-jekyll.js" | relative_url }}"></script>
 {% endif %}
-<!--<script src="{{"/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" | relative_url }}"></script>-->
-<script src="{{"/assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js" | relative_url }}"></script>
+<!--<script src="{{"/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" | relative_url }}"></script>
+<script src="{{"/assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js" | relative_url }}"></script>-->
 
 <script src="{{"/assets/scripts.js" | relative_url }}"></script>
 <!--<script src="{{"/assets/parallax.min.js" | relative_url }}"></script>-->
