--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,5 @@
 <!-- Navigation -->
-<nav class="navbar navbar-expand-lg navbar-light fixed-top is-visible" id="mainNav">
+<nav class="navbar navbar-expand-lg navbar-light fixed-top is-fixed" id="mainNav">
   <div class="container">
     <a class="navbar-brand" href="{{"/" | relative_url }}">Into the while</a>
     <div class="collapse navbar-collapse">
