--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,11 @@
     <div class="sidebar" id="sidebar">
       <div class="sidebar-item"></div>
       <nav class="sidebar-nav">
-        <a class="sidebar-nav-item" href="/lanyon/">Home</a>
-        <a class="sidebar-nav-item" href="/lanyon/about/">About</a>
-        <a class="sidebar-nav-item" href="false">Download</a>
-        <a class="sidebar-nav-item" href="">GitHub project</a>
+        <a class="sidebar-nav-item" href="/">Accueil</a>
+        <a class="sidebar-nav-item" href="/about">About</a>
+        <a class="sidebar-nav-item" href="/music">Looping music</a>
+        <a class="sidebar-nav-item" href="/posts">News</a>
+        <a class="sidebar-nav-item" href="/contact">Contact</a>
       </nav>
     </div>
 
