--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,9 @@
   <link rel="stylesheet" href="{{"/assets/vendor/bootstrap/css/bootstrap.min.css" | relative_url }}">
 
   <link rel="stylesheet" href="{{"/assets/vendor/font-awesome/css/font-awesome.min.css" | relative_url }}">
-
+  {% if page.layout contains 'music' %}
+  <link rel="stylesheet" href="{{"/assets/flickity.min.css" | relative_url }}">
+  {% endif %}
   <link rel="stylesheet" href="{{"/assets/aos.css" | relative_url }}">
 
   <link rel="stylesheet" href="{{"/assets/main.css" | relative_url }}">
