--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,14 +1,45 @@
-<script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
+
 {% if page.title contains 'Posts' %}
+<script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
 <script src="{{"/assets/infinite-jekyll.js" | relative_url }}"></script>
 {% endif %}
-<!--<script src="{{"/assets/vendor/bootstrap/js/bootstrap.bundle.min.js" | relative_url }}"></script>
-<script src="{{"/assets/vendor/startbootstrap-clean-blog/js/clean-blog.min.js" | relative_url }}"></script>-->
+
+{% if page.layout contains 'music' %}
+<script src="{{"/assets/flickity.pkgd.min.js" | relative_url }}"></script>
+<script>
+    (function(document) {
+
+            //parallax
+            // external js: flickity.pkgd.js
+
+var flkty = new Flickity('.carousel');
+
+var cellRatio = 0.7;
+var bgRatio = 1;
+var fgRatio = 1.25;
+var count = flkty.slides.length - 1;
+
+var background = document.querySelector('.parallax__layer--bg');
+var foreground = document.querySelector('.parallax__layer--fg');
+
+flkty.on( 'scroll', function( progress ) {
+  background.style.left = ( 0.5 - ( 0.5 + progress * count ) ) * 100 + '%';
+  //moveParallaxLayer( background, bgRatio, progress );
+moveParallaxLayer( foreground, fgRatio, progress );
+});
+// trigger initial scroll
+flkty.reposition();
+
+function moveParallaxLayer( layer, layerRatio, progress ) {
+  layer.style.left = ( 0.5 - ( 0.5 + progress * count ) * 0.6 * layerRatio ) * 100 + '%';
+}
+
+          })(document);
+    </script>
+{% endif %}
 
 <script src="{{"/assets/scripts.js" | relative_url }}"></script>
-<!--<script src="{{"/assets/parallax.min.js" | relative_url }}"></script>-->
 <script src="{{"/assets/parallax.js" | relative_url }}"></script>
-
 <script src="{{"/assets/aos.js" | relative_url }}"></script>
 
 <script>
@@ -23,7 +54,7 @@
   </script>
 
 {% if page.url contains 'contact' %}
-  <!-- Form Validation -->
+  <script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
   <script src="{{"/assets/vendor/startbootstrap-clean-blog/js/jqBootstrapValidation.js" | relative_url }}"></script>
   <!-- Send Form -->
   <script>
