--- a/_includes/head.html
+++ b/_includes/head.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="{{"/assets/vendor/font-awesome/css/font-awesome.min.css" | relative_url }}">
   {% if page.layout contains 'music' %}
   <link rel="stylesheet" href="{{"/assets/flickity.min.css" | relative_url }}">
+  <link rel="stylesheet" href="{{"/assets/vendor/kaleidoscope/style.min.css" | relative_url }}">
   {% endif %}
   <link rel="stylesheet" href="{{"/assets/aos.css" | relative_url }}">
 
