--- a/_layouts/music.html
+++ b/_layouts/music.html
@@ -6,11 +6,10 @@ layout: default
 <div class="parallax">
     <!-- background parallax layer -->
     <div class="parallax__layer parallax__layer--bg">
-      <div class="parallax__layer__cell parallax__layer__cell--bg"></div>
-      <div class="parallax__layer__cell parallax__layer__cell--bg"></div>
-      <div class="parallax__layer__cell parallax__layer__cell--bg"></div>
-      <div class="parallax__layer__cell parallax__layer__cell--bg"></div>
-      <div class="parallax__layer__cell parallax__layer__cell--bg"></div>
+      <div class="parallax__layer__cell parallax__layer__cell--bg kaleidoscope"></div>
+      <div class="parallax__layer__cell parallax__layer__cell--bg kaleidoscope"></div>
+      <div class="parallax__layer__cell parallax__layer__cell--bg kaleidoscope"></div>
+      <div class="parallax__layer__cell parallax__layer__cell--bg kaleidoscope"></div>
     </div>
     <!-- foreground parallax layer -->
     <div class="parallax__layer parallax__layer--fg">
@@ -18,11 +17,9 @@ layout: default
       <div class="parallax__layer__cell parallax__layer__cell--fg"></div>
       <div class="parallax__layer__cell parallax__layer__cell--fg"></div>
       <div class="parallax__layer__cell parallax__layer__cell--fg"></div>
-      <div class="parallax__layer__cell parallax__layer__cell--fg"></div>
     </div>
     <!-- carousel: midground parallax layer -->
     <div class="carousel">
-      <div class="carousel-cell"><h1>Titre du content</h1></div>
       <div class="carousel-cell"><h1>Titre du content</h1></div>
       <div class="carousel-cell"><h1>Titre du content</h1></div>
       <div class="carousel-cell"><h1>Titre du content</h1></div>
