modif header + jekyll compose

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -11,8 +11,8 @@ layout: default
 >
 <defs>
 						<linearGradient id="gradient-1" x1="0%" y1="0%" x2="100%" y2="100%">
-							<stop stop-color="#9d316e"/>
-							<stop offset="1" stop-color="#de2d3e"/>
+							<stop stop-color="#2899C3"/>
+							<stop offset="1" stop-color="#51C258"/>
 						</linearGradient>
 					</defs>
           <path data-depth="1.00" d="M 123 157.5 C 99 188.3 74 222.2 75 265.9 C 75 283.8 98 296 115 299 C 168 308.3 216 299.1 269 319.3 C 317 337.6 360 376.4 410 390.8 C 445 401 481 399.4 509 386.5 C 530 377 553 364.2 562 342.1 C 571 317.7 558 286.2 540 260.2 C 527 241.4 513 223.2 499 204.7 C 481 179.5 464 153.5 444 129.7 C 426 107.6 408 81.1 381 69.4 C 336 49.9 291 59.4 253 71.5 C 201 87.9 154 116.4 123 157.5 L 123 157.5 Z" />
