infinite scroll sur home

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,5 +1,5 @@
 
-{% if page.title contains 'Posts' %}
+{% if page.layout contains 'home' %}
 <script src="{{"/assets/vendor/jquery/jquery.min.js" | relative_url }}"></script>
 <script src="{{"/assets/infinite-jekyll.js" | relative_url }}"></script>
 {% endif %}
