--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <!-- Footer -->
 
-<hr>
+<!--<hr>
 
 <footer>
   <div class="container">
@@ -10,4 +10,4 @@
       </div>
     </div>
   </div>
-</footer>
+</footer>-->
