mise en place de smoothscroll

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -48,8 +48,9 @@ function moveParallaxLayer( layer, layerRatio, progress ) {
 
 <script src="{{"/assets/scripts.js" | relative_url }}"></script>
 <script src="{{"/assets/aos.js" | relative_url }}"></script>
-
+<script src="{{"/assets/SmoothScroll.min.js" | relative_url }}"></script>
 <script>
+
     AOS.init({
       offset: 200,
       duration: 600,
